--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/burak/glassfish5/glassfish/domains/domain1
 j2ee.server.home=/home/burak/glassfish5/glassfish
 j2ee.server.instance=[/home/burak/glassfish5/glassfish:/home/burak/glassfish5/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/home/burak/glassfish5
+javac.debug=true
+javadoc.preview=true
+selected.browser=Chrome
 user.properties.file=/home/burak/.netbeans/8.2rc/build.properties
