--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.dsn.jar=lib/dsn.jar
+file.reference.gimap.jar=lib/gimap.jar
+file.reference.imap.jar=lib/imap.jar
+file.reference.mail.jar=lib/mail.jar
+file.reference.mailapi.jar=lib/mailapi.jar
+file.reference.pop3.jar=lib/pop3.jar
+file.reference.smtp.jar=lib/smtp.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +49,15 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.jsf20.classpath}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.gimap.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -53,7 +68,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -69,7 +86,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
