veritabanı eklendi, mail gönderilirdi.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.dsn.jar=lib/dsn.jar
-file.reference.gimap.jar=lib/gimap.jar
-file.reference.imap.jar=lib/imap.jar
-file.reference.mail.jar=lib/mail.jar
-file.reference.mailapi.jar=lib/mailapi.jar
-file.reference.pop3.jar=lib/pop3.jar
-file.reference.smtp.jar=lib/smtp.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -51,13 +44,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
-    ${file.reference.dsn.jar}:\
-    ${file.reference.gimap.jar}:\
-    ${file.reference.imap.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.mailapi.jar}:\
-    ${file.reference.pop3.jar}:\
-    ${file.reference.smtp.jar}
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,9 +55,7 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
